--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 cfg-if = "0.1.2"
-worker = "0.0.11"
+worker = "0.0.13"
 serde_json = "1.0.67"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
@@ -20,6 +20,10 @@ serde_json = "1.0.67"
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
 # code size when deploying.
 console_error_panic_hook = { version = "0.1.1", optional = true }
+serde-wasm-bindgen = "0.5.0"
+serde = { version = "1.0.155", features = ["derive"] }
+geojson = "0.24.0"
+
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
