--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "" # todo
+name = "create_waypoints"
 main = "build/worker/shim.mjs"
 compatibility_date = "2022-01-20"
 
@@ -6,5 +6,4 @@ compatibility_date = "2022-01-20"
 WORKERS_RS_VERSION = "0.0.11"
 
 [build]
-command = "cargo install -q worker-build --version 0.0.9 && worker-build"
-# command = "cargo install -q worker-build --version 0.0.9 && worker-build --release"
+command = "cargo install -q worker-build --version 0.0.9 && worker-build --release"
